@@ -14,6 +14,5 @@ if RUBY_VERSION >= '1.9'
   $CFLAGS << ' -DRUBY_19'
 end
 
-have_header("ruby/st.h") || have_header("st.h")
 have_header("re.h")
 create_makefile 'parser'
